# Csv-Orm

./: .csvorm.toml  .gitignore  README.md  main.py  pyproject.toml  test.py
data/: car copy.csv  car.csv  user.csv
data_csv/: user.csv
models/: car.py  user.py
src/csvorm/: __init__.py  cli.py
src/csvorm/runtime/: orm.py  orm.pyi  query.py  query.pyi
src/csvorm/tooling/: codegen.py  config.py  get_root_user.py  init.py  model_loader.py
src/runtime/: orm.py  orm.pyi  query.py  query.pyi
src/tooling/: codegen.py  watch.py
